--- a/mini02.qmd
+++ b/mini02.qmd
@@ -3,10 +3,18 @@ title: "{{< var course.short >}} Mini-Project #02: The Business of Show Business
 format:
   html:
     code-link: true
+    code-fold: true           # Enables code folding
+    code-summary: "Show Code" # Custom text for toggling
+    code-fold-default: hide   # Code hidden by default
 ---
+
+
 
 ```{r}
 # to clear variables: rm(list = ls())
+
+#setwd("C:/Users/alien/OneDrive/Documents/STA9750-2024-FALL")
+
 
 # Install and load necessary packages
 required_packages <- c("stringr", "ggplot2", "readr", "dplyr", "scales")
@@ -36,8 +44,9 @@ for (pkg in required_packages) {
 #    library(pkg, character.only = TRUE)
 #  }
 #}
+```
 
-
+```{r}
 library(ggplot2)
 library(dplyr)
 
@@ -335,25 +344,47 @@ you will need to use `separate_longer_delim` to answer various questions.
 Using your knowledge of `dplyr` functionality, answer the following questions
 
 
+
+
+
+
+
 ::: {.callout-tip}
 #### Task 2: Instructor-Provided Questions
+
 
 1. How many movies are in our data set? How many TV series? How many TV episodes?
 
 ```{r}
-movies_series_episodes_counts <- filter(count(TITLE_BASICS, titleType), 
-                 titleType == "movie" | titleType == "tvSeries" | titleType == "tvEpisode")
 
-movies_series_episodes_counts
+
+# Filter and count the number of movies, TV series, and TV episodes
+movies_series_episodes_counts <- filter(count(TITLE_BASICS, titleType), 
+                                        titleType == "movie" | titleType == "tvSeries" | titleType == "tvEpisode")
+
+# Display the result in a formatted sentence
+cat("There are a total of", 
+    movies_series_episodes_counts[movies_series_episodes_counts$titleType == "movie", "n"], "movies,",
+    movies_series_episodes_counts[movies_series_episodes_counts$titleType == "tvSeries", "n"], "TV series, and",
+    movies_series_episodes_counts[movies_series_episodes_counts$titleType == "tvEpisode", "n"], "TV episodes in our data set.")
 ```
+
 
 2. Who is the oldest living person in our data set? 
 
 ```{r}
-NAME_BASICS |>
+
+# Filter for the oldest living person (who has no death year) and find the minimum birth year
+oldest_living_person <- NAME_BASICS |>
   filter(is.na(deathYear)) |>
   slice_min(birthYear)
+
+# Display the result in a formatted sentence
+cat("The oldest living person in the data set was born in", 
+    oldest_living_person$birthYear, "and their name is", 
+    oldest_living_person$primaryName, ".")
 ```
+
 
 3. There is one TV Episode in this data set with a perfect 10/10 rating and 200,000 IMDb ratings. What is it? What series does it belong to?
 
@@ -362,13 +393,56 @@ perfect_episode <- TITLE_RATINGS |>
   filter(averageRating == 10, numVotes >= 200000) |>  # At least 200,000 votes
   inner_join(TITLE_BASICS, by = "tconst") |>  # Join to get title information
   inner_join(TITLE_EPISODES, by = "tconst") |>  # Episode information
-  select(primaryTitle, originalTitle, titleType, numVotes) |>  
-  slice_head(n = 10) 
+  select(tconst, primaryTitle, originalTitle, titleType, numVotes) |>  # Include identifier
+  slice_head(n = 1)  # Select the first episode that meets the criteria
 
-perfect_episode
+# Display the result in a formatted sentence
+cat("The episode with a perfect rating of 10/10 and more than 200,000 votes is",
+    perfect_episode$primaryTitle, "with", perfect_episode$numVotes, "votes. The identifier (tconst) is", perfect_episode$tconst, ".")
+
+```
+
+```{r}
+
+# Set a CRAN mirror before installing any packages
+options(repos = c(CRAN = "https://cloud.r-project.org"))
+
+# Install magick if necessary
+if (!require("magick")) {
+  install.packages("magick")
+}
+
+# Load libraries
+library(dplyr)
+library(magick)
+
+# Your existing code to find the perfect episode
+perfect_episode <- TITLE_RATINGS |>
+  filter(averageRating == 10, numVotes >= 200000) |>  # At least 200,000 votes
+  inner_join(TITLE_BASICS, by = "tconst") |>  # Join to get title information
+  inner_join(TITLE_EPISODES, by = "tconst") |>  # Episode information
+  select(tconst, primaryTitle, originalTitle, titleType, numVotes) |>  # Include identifier
+  slice_head(n = 1)  # Select the first episode that meets the criteria
+
+# Display the result in a formatted sentence
+cat("The episode with a perfect rating of 10/10 and more than 200,000 votes is",
+    perfect_episode$primaryTitle, "with", perfect_episode$numVotes, "votes. The identifier (tconst) is", perfect_episode$tconst, ".")
+
+# Load the image from your local path
+img_path <- "C:/Users/alien/OneDrive/Documents/STA9750-2024-FALL/Image Breaking Bad.jpg"  # Path to your local image
+img <- image_read(img_path)
+
+# Display the image
+print(img)
+
+# Optionally, you can annotate it with text
+#image_annotate(img, "Breaking Bad Scene", size = 30, color = "white", location = "+20+20") |> print()
+
 
 
 ```
+
+
 
 
 4. What four projects is the actor Mark Hamill most known for? 
@@ -377,42 +451,27 @@ perfect_episode
 
 
 # Get the four projects Mark Hamill is most known for
-mark_hamill_projects = NAME_BASICS |>
+mark_hamill_projects <- NAME_BASICS |>
   filter(primaryName == "Mark Hamill") |>
   separate_rows(knownForTitles, sep = ",") |>
   inner_join(TITLE_BASICS, by = c("knownForTitles" = "tconst")) |>
-  inner_join(TITLE_RATINGS, by = c("knownForTitles" = "tconst")) |>
-  select(primaryName, primaryTitle, titleType, averageRating, numVotes) |>
   slice(1:4)  # Limit to the first 4 projects
 
-mark_hamill_projects
-# Get the four projects Milla Jovovich is most known for
-#milla_jovovich_projects = NAME_BASICS |>
-#  filter(primaryName == "Milla Jovovich") |>
-#  separate_rows(knownForTitles, sep = ",") |>
-#  inner_join(TITLE_BASICS, by = c("knownForTitles" = "tconst")) |>
-#  inner_join(TITLE_RATINGS, by = c("knownForTitles" = "tconst")) |>
-#  select(primaryName, primaryTitle, titleType, averageRating, numVotes) |>
-#  slice(1:4)  # Limit to the first 4 projects
-
-# Combine the two into a single table
-#combined_projects = bind_rows(mark_hamill_projects, milla_jovovich_projects)
-
-# Display the combined result
-#combined_projects
-
+# Display the result in a formatted sentence
+cat("Mark Hamill is most known for these four projects:\n",
+    paste(mark_hamill_projects$primaryTitle, collapse = ", "), ".")
 
 ```
 
 
-5. What TV series, with more than 12 episodes, has the highest _average_
-   rating? 
 
+5. What TV series, with more than 12 episodes, has the highest _average_
+rating? 
 
 # Find the highest average rating among these series
 
 ```{r}
-# Count episodes per series
+# Count episodes per series and filter for series with more than 12 episodes
 episode_counts <- TITLE_EPISODES |>
   count(parentTconst) |> 
   filter(n > 12)
@@ -425,10 +484,10 @@ best_series <- TITLE_RATINGS |>
   slice(1) |> 
   select(primaryTitle, averageRating)
 
-best_series
-
+# Display the result in a formatted sentence
+cat("The TV series with the highest average rating is", best_series$primaryTitle, 
+    "with an average rating of", best_series$averageRating, ".")
 ```
-
 
 
 6. The TV series *Happy Days* (1974-1984) gives us the common idiom ["jump the
@@ -446,7 +505,7 @@ best_series
 # Step 1: Find the IMDb ID for Happy Days
 happy_days <- TITLE_BASICS |>
   filter(primaryTitle == "Happy Days" & titleType == "tvSeries")
-happy_days_id <- happy_days$tconst
+happy_days_id <- happy_days$tconst[1]  # Select the first IMDb ID
 
 # Step 2: Get all episodes of Happy Days and their ratings
 happy_days_episodes <- TITLE_EPISODES |>
@@ -455,15 +514,16 @@ happy_days_episodes <- TITLE_EPISODES |>
   mutate(seasonNumber = as.numeric(seasonNumber)) |>  # Convert seasonNumber to numeric
   select(seasonNumber, averageRating)
 
-# Step 3: Calculate and print average rating by season, sorted by seasonNumber
+# Step 3: Calculate average rating by season, sorted by seasonNumber
 average_ratings_by_season <- happy_days_episodes |>
   group_by(seasonNumber) |>
   summarize(avg_rating = mean(averageRating, na.rm = TRUE)) |>
-  arrange(seasonNumber)  # Sort by season number in ascending order
+  arrange(seasonNumber)
 
-# Print the results
+# Output: Print the IMDb ID and the average ratings by season
+cat("The IMDb ID for 'Happy Days' is:", happy_days_id, "\n\n")
+cat("Average ratings by season:\n")
 print(average_ratings_by_season)
-
 ```
    
 
@@ -495,6 +555,7 @@ Validate your success metric as follows:
    indeed box office successes.
    
 ```{r}
+# Step 1: Calculate the success metric and get the top 10 movies
 top_movies <- TITLE_RATINGS |>
   mutate(success = averageRating * log(numVotes)) |>
   inner_join(TITLE_BASICS, by = "tconst") |>
@@ -502,39 +563,46 @@ top_movies <- TITLE_RATINGS |>
   top_n(10, success) |>
   select(primaryTitle, success)
 
-top_movies
+# Step 2: Display the top 10 movies in a simple format
+cat("Top 10 movies based on success metric:\n")
+cat(top_movies$primaryTitle, sep = "\n")
 
 ```
+
 2. Choose 3-5 movies with large numbers of IMDb votes that score poorly
    on your success metric and confirm that they are indeed of low quality.
    
 ```{r}
 
-TITLE_RATINGS <- TITLE_RATINGS |> filter(numVotes > 0)
-
+# Step 1: Filter movies with votes and calculate the success metric
 joined_data <- TITLE_RATINGS |>
+  filter(numVotes > 0) |>
   inner_join(TITLE_BASICS, by = "tconst") |>
   filter(titleType == "movie") |>
   mutate(success = averageRating * log(numVotes))
 
-# Define threshold for "high votes" and select bottom movies by success
+# Step 2: Select the bottom 5 movies with high vote counts and low success
 low_quality_movies <- joined_data |>
-  filter(numVotes > 100000) |>  # Define a high vote count threshold
-  arrange(success) |>           # Arrange by the success metric (ascending)
+  filter(numVotes > 100000) |>
+  arrange(success) |>           # Sort by the success metric (ascending)
   slice_head(n = 5) |>
   select(primaryTitle, numVotes, averageRating, success)
 
-# Check the result
-print(low_quality_movies)
-
-
-
+# Step 3: Display the result
+cat("Bottom 5 movies by success with more than 100,000 votes:\n")
+for (i in 1:nrow(low_quality_movies)) {
+  cat(i, ". ", low_quality_movies$primaryTitle[i], 
+      " | Votes: ", low_quality_movies$numVotes[i], 
+      " | Rating: ", low_quality_movies$averageRating[i], 
+      " | Success: ", round(low_quality_movies$success[i], 2), "\n", sep = "")
+}
 ```   
    
 3. Choose a prestige actor or director and confirm that they have many projects
    with high scores on your success metric.
 
 ```{r}
+
 
 # Step 1: Get Milla Jovovich's ID
 milla <- NAME_BASICS |>
@@ -556,7 +624,15 @@ milla_movies <- milla_titles |>
 
 # Step 4: Show the top 5 successful movies with numVotes and averageRating
 top_milla_movies <- milla_movies |> slice_head(n = 5)
-print(top_milla_movies)
+
+# Step 5: Display the result
+cat("Top 5 movies starring Milla Jovovich based on success metric:\n")
+for (i in 1:nrow(top_milla_movies)) {
+  cat(i, ". ", top_milla_movies$primaryTitle[i], 
+      " | Votes: ", top_milla_movies$numVotes[i], 
+      " | Rating: ", top_milla_movies$averageRating[i], 
+      " | Success: ", round(top_milla_movies$success[i], 2), "\n", sep = "")
+}
 
 
 ```
@@ -564,15 +640,50 @@ print(top_milla_movies)
 4. Perform at least one other form of 'spot check' validation. 
 
 ```{r}
-# Example of spot checking well-known successful movies
-spot_check <- TITLE_RATINGS |>
-  inner_join(TITLE_BASICS, by = "tconst") |>  # Join to access primaryTitle
-  filter(primaryTitle %in% c("The Shawshank Redemption", 
-                             "The Godfather", 
-                             "The Dark Knight")) |>
+
+# Step 1: Load necessary libraries
+install.packages("dplyr")
+library(dplyr)
+
+# Step 2: Retrieve all Resident Evil movies from the database, excluding films with less than 200 votes
+resident_evil_movies <- TITLE_BASICS |>
+  inner_join(TITLE_RATINGS, by = "tconst") |>
+  filter(grepl("Resident Evil", primaryTitle, ignore.case = TRUE), numVotes >= 200) |>  # Search for "Resident Evil" and filter votes
   select(primaryTitle, averageRating, numVotes)
 
-print(spot_check)
+# Step 3: Perform a spot check for Milla Jovovich's Resident Evil movies, excluding films with less than 200 votes
+milla_movies_spot_check <- TITLE_PRINCIPALS |>
+  filter(nconst == "nm0000170") |>  # Milla Jovovich's nconst
+  inner_join(TITLE_BASICS, by = "tconst") |> 
+  inner_join(TITLE_RATINGS, by = "tconst") |>
+  filter(grepl("Resident Evil", primaryTitle, ignore.case = TRUE), numVotes >= 200) |>  # Filter votes >= 200
+  select(primaryTitle, averageRating, numVotes)
+
+# Step 4: Display the result of the spot check for Resident Evil movies
+cat("Spot check for Milla Jovovich's Resident Evil movies:\n")
+apply(milla_movies_spot_check, 1, function(row) {
+  cat(row["primaryTitle"], "| Rating:", row["averageRating"], "| Votes:", row["numVotes"], "\n")
+})
+
+# Extra Check: Overall Average Rating Comparison
+# Step 5: Calculate Milla Jovovich's average rating across all movies
+milla_movies_all <- TITLE_PRINCIPALS |>
+  filter(nconst == "nm0000170") |>  # Milla Jovovich's nconst
+  inner_join(TITLE_BASICS, by = "tconst") |> 
+  inner_join(TITLE_RATINGS, by = "tconst") |>
+  summarise(overall_avg_rating = mean(averageRating, na.rm = TRUE))
+
+# Step 6: Compare the spot-checked movies' average rating to her overall average
+spot_check_avg_rating <- mean(milla_movies_spot_check$averageRating, na.rm = TRUE)
+
+# Step 7: Display final comparison with extra audience details
+cat("\nSpot Check Average Rating for Resident Evil movies:", round(spot_check_avg_rating, 2), 
+    "\nOverall Average Rating for Milla Jovovich movies:", round(milla_movies_all$overall_avg_rating, 2), "\n")
+
+# Additional explanation
+cat("\nHuge Audience: These films have hundreds of thousands of votes, showing they are fan favorites, especially the first Resident Evil with almost 300,000 votes.\n",
+    "Strong Appeal: Milla led the series for six movies over 14 years, proving her ability to keep audiences interested.\n",
+    "Action Icon: She made Alice a well-loved character in the action-horror genre, turning the Resident Evil series into a lasting success.\n")
 
 ```
 
@@ -580,18 +691,37 @@ print(spot_check)
    determine a value $v$ such that movies above $v$ are all "solid" or better.
 
 ```{r}
-# Join with TITLE_BASICS and filter for highly rated movies in one step
+# Step 1: Define a numerical threshold for success
+threshold_rating <- 7.5  # Movies with ratings 7.5 and above
+threshold_votes <- 100000  # Movies with at least 100,000 votes
+
+# Step 2: Join with TITLE_BASICS and filter for highly rated movies based on thresholds
 solid_movies <- TITLE_RATINGS |>
   inner_join(TITLE_BASICS, by = "tconst") |>
-  filter(averageRating >= 7.5, numVotes >= 1000) |>  # Example thresholds for solid movies
+  filter(averageRating >= threshold_rating, numVotes >= threshold_votes) |>  
   select(primaryTitle, averageRating, numVotes) |>
-  slice_head(n = 20)  # Get the top 20
+  slice_head(n = 10)  # Get the top 10 movies
 
-# Display the solid movies
-print(solid_movies)
-
+# Step 3: Display the top solid movies
+cat("Top 10 solid movies (IMDb rating >= ", threshold_rating, " and votes >= ", threshold_votes, "):\n", sep = "")
+for (i in 1:nrow(solid_movies)) {
+  cat(i, ". ", solid_movies$primaryTitle[i], 
+      " | Rating: ", solid_movies$averageRating[i], 
+      " | Votes: ", solid_movies$numVotes[i], "\n", sep = "")
+}
 
 ```
+
+
+
+
+```{r}
+# Check if the dataset exists and show the structure of the dataset
+
+```
+
+
+
 
 
 
@@ -617,146 +747,250 @@ may help guide your thinking.
 1. What was the genre with the most "successes" in each decade? 
 
 ```{r}
-# Step 1: Filter for movies from 1980 onwards, calculate success, and assign decades
-# Step 1: Filter for movies from 1980 onwards, calculate success, and assign decades
-movies_by_genre_decade <- TITLE_RATINGS |>
+
+# Normalize by the number of movies in each genre
+most_successes_in_each_decade <- TITLE_RATINGS |>
   inner_join(TITLE_BASICS, by = "tconst") |>
-  filter(titleType == "movie", as.numeric(startYear) >= 1950) |>  # Movies from 1980 onwards
-  mutate(success = averageRating * log(numVotes),                 # Calculate success metric
-         startYear = as.numeric(startYear),                       # Ensure numeric startYear
-         decade = 10 * (startYear %/% 10)) |>                    # Group by decade
-  separate_rows(genres, sep = ",") |>                             # Split multiple genres
-  group_by(decade, genres) |>                                     # Group by decade and genre
-  summarize(success_count = n(), .groups = 'drop') |>             # Count successes per genre
-  arrange(decade, desc(success_count))                            # Sort by decade and success count
+  filter(titleType == "movie", as.numeric(startYear) >= 1900) |>
+  mutate(decade = 10 * (as.numeric(startYear) %/% 10)) |>
+  separate_rows(genres, sep = ",") |>
+  group_by(decade, genres) |>
+  summarize(total_votes = sum(numVotes), movie_count = n(), .groups = 'drop') |>
+  mutate(votes_per_movie = total_votes / movie_count) |>  # Normalize by number of movies
+  slice_max(votes_per_movie, by = decade, n = 1)
 
-# Step 2: Find the genre with the most successes for each decade
-top_genre_by_decade <- movies_by_genre_decade |>
-  group_by(decade) |>                              # Group by decade
-  slice_max(success_count, n = 1)                  # Get the top genre per decade
-
-# Show the result
-print(top_genre_by_decade)
+# Display the results
+print(most_successes_in_each_decade)
 
 
 
+```
 
+```{r}
+# Load necessary libraries
+library(ggplot2)
 
-
-
+# Plot the results: Votes per movie by genre and decade
+ggplot(most_successes_in_each_decade, aes(x = factor(decade), y = votes_per_movie, fill = genres)) +
+  geom_col(show.legend = FALSE) +  # Use geom_col to create a bar plot
+  geom_text(aes(label = genres), vjust = -0.5, size = 3.5) +  # Add genre labels on top of bars
+  labs(
+    title = "Top Genre by Decade (Normalized by Votes per Movie)",
+    x = "Decade",
+    y = "Votes per Movie"
+  ) +
+  theme_minimal(base_size = 14) +  # Use a clean theme
+  scale_y_continuous(labels = scales::comma) +  # Format y-axis for better readability
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))  # Rotate x-axis labels for better visibility
 ```
 
 2. What genre consistently has the most "successes"? What genre used to reliably produced "successes" and has fallen out of favor? 
 
 ```{r}
 
-# Step 1: Filter for movies from 1980 onwards, calculate success, and group by year
-movies_by_genre_year <- TITLE_RATINGS |>
-  inner_join(TITLE_BASICS, by = "tconst") |>
-  filter(titleType == "movie", as.numeric(startYear) >= 1980) |>  # Movies from 1980
-  mutate(success = averageRating * log(numVotes),                 # Calculate success metric
-         startYear = as.numeric(startYear)) |>                    # Ensure numeric startYear
-  separate_rows(genres, sep = ",") |>                             # Split multiple genres
-  group_by(startYear, genres) |>                                  # Group by year and genre
-  summarize(success_count = n(), .groups = 'drop')                # Count successes per genre per year
+library(ggplot2)
+library(dplyr)
 
-# Step 2: Find the genre with the most successes for each year
-top_genre_by_year <- movies_by_genre_year |>
-  group_by(startYear) |>                              # Group by year
-  slice_max(success_count, n = 1)                     # Get the top genre per year
+# ine plot that shows the average rating of all genres starting from 1990
 
-# Step 3: Sort by most recent year first
-top_genre_by_year <- top_genre_by_year |>
-  arrange(desc(startYear))  # Sort by descending year
+# Filter the data to include only from 1990 onwards
+data_from_1990 <- most_successes_in_each_decade |>
+  filter(as.numeric(decade) >= 1990)
 
-# Show the result
-print(top_genre_by_year)
+# Calculate average rating per genre per decade
+avg_rating_by_genre <- data_from_1990 |>
+  group_by(decade, genres) |>
+  summarize(avg_rating = mean(votes_per_movie, na.rm = TRUE))  # Assuming votes_per_movie represents rating
 
-
-
-
+# Plot the results
+ggplot(avg_rating_by_genre, aes(x = as.numeric(decade), y = avg_rating, color = genres, group = genres)) +
+  geom_line(size = 1.2) +
+  geom_point(size = 3) +
+  labs(
+    title = "Average Rating by Genre (1990 Onwards)",
+    x = "Decade",
+    y = "Average Rating"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))  # Rotate x-axis labels for better readability
 ```
 
-3. What genre has produced the most "successes" since 2010? Does it have the
-   highest success _rate_ or does it only have a large number of successes
-   because there are many productions in that genre? 
-   
+
+3. What genre has produced the most “successes” since 2010? Does it have the highest success rate or does it only have a large number of successes because there are many productions in that genre?
+
 ```{r}
+library(ggplot2)
+library(dplyr)
 
-# Step 1: Filter for movies since 2010 and calculate success
-movies_since_2010 <- TITLE_RATINGS |>
-  inner_join(TITLE_BASICS, by = "tconst") |>
-  filter(titleType == "movie", as.numeric(startYear) >= 2010) |>  # Movies from 2010 onwards
-  mutate(success = averageRating * log(numVotes)) |>              # Calculate success metric
-  separate_rows(genres, sep = ",")                                # Split multiple genres
+# Step 1: Filter the data to include only from 1990 to 2020
+data_from_1990 <- most_successes_in_each_decade |>
+  filter(as.numeric(decade) >= 1990 & as.numeric(decade) <= 2020)
 
-# Step 2: Calculate both average success and total count for each genre
-genre_stats <- movies_since_2010 |>
-  group_by(genres) |>
-  summarize(
-    avg_success = mean(success, na.rm = TRUE),  # Calculate average success per genre
-    total_count = n(),                          # Total number of movies in the genre
-    .groups = 'drop'
-  )
+# Step 2: Group by decade and genre, then count the number of movies per genre per decade
+movies_by_genre_decade <- data_from_1990 |>
+  group_by(decade, genres) |>
+  summarize(movie_count = n(), .groups = 'drop')
 
-# Step 3.1: Organize by total count (descending)
-cat("\n--- Organized by Total Count (Descending) ---\n")
-genre_stats_by_count <- genre_stats |>
-  arrange(desc(total_count))  # Sort by total count in descending order
-print(genre_stats_by_count)
-
-# Step 3.2: Organize by average success (descending)
-cat("\n--- Organized by Average Success (Descending) ---\n")
-genre_stats_by_success <- genre_stats |>
-  arrange(desc(avg_success))  # Sort by average success in descending order
-print(genre_stats_by_success)
-
-
-
-
-```
-
-4. What genre has become more popular in recent years? 
+# Step 3: Plot the number of movies per genre and decade
+ggplot(movies_by_genre_decade, aes(x = decade, y = movie_count, fill = genres)) +
+  geom_col(position = "dodge") +  # Bar plot with genres side by side
+  labs(
+    title = "Number of Movies by Genre and Decade (1990 to 2020)",
+    x = "Decade",
+    y = "Number of Movies"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
+  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for better readability
+```  
+  
+  
 
 ```{r}
 
 library(ggplot2)
+library(dplyr)
 
-# Step 1: Filter for movies from the last 10 years and calculate success
-movies_last_10_years <- TITLE_RATINGS |>
-  inner_join(TITLE_BASICS, by = "tconst") |>
-  filter(titleType == "movie", as.numeric(startYear) >= 2014) |>  # Movies from 2014 onwards
-  mutate(startYear = as.numeric(startYear)) |>                    # Ensure numeric startYear
-  separate_rows(genres, sep = ",")                                # Split multiple genres
+# Step 1: Filter the data to include only from 1990 to 2020
+data_from_1990 <- most_successes_in_each_decade |>
+  filter(as.numeric(decade) >= 1990 & as.numeric(decade) <= 2020)
 
-# Step 2: Count number of movies per genre per year
-movies_by_year_genre <- movies_last_10_years |>
-  group_by(startYear, genres) |>
-  summarize(total_movies = n(), .groups = 'drop')                 # Count total movies per genre per year
+# Step 2: Group by decade and genre, then count the number of movies per genre per decade
+movies_by_genre_decade <- data_from_1990 |>
+  group_by(decade, genres) |>
+  summarize(movie_count = n(), .groups = 'drop')
 
-# Step 3: Find the top 10 genres with the most movies over the last 10 years
-top_10_genres <- movies_by_year_genre |>
-  group_by(genres) |>
-  summarize(total_movies = sum(total_movies)) |>
-  arrange(desc(total_movies)) |>
-  slice_head(n = 10) |>                                           # Select top 10 genres
-  pull(genres)                                                    # Get the top 10 genre names
+# Step 3: Plot the number of movies per genre and decade
+ggplot(movies_by_genre_decade, aes(x = decade, y = movie_count, fill = genres)) +
+  geom_col(position = "dodge") +  # Bar plot with genres side by side
+  labs(
+    title = "Number of Movies by Genre and Decade (1990 to 2020)",
+    x = "Decade",
+    y = "Number of Movies"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
+  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for better readability
 
-# Step 4: Filter the data for only the top 10 genres
-movies_top_10_genres <- movies_by_year_genre |>
-  filter(genres %in% top_10_genres)
 
-# Step 5: Plot the chart showing genre trends over the last 10 years
-ggplot(movies_top_10_genres, aes(x = startYear, y = total_movies, color = genres, group = genres)) +
-  geom_line(size = 1.2) +                                         # Plot lines for each genre
-  labs(title = "Top 10 Genres by Movie Count (2014-2024)",
-       x = "Year", y = "Number of Movies",
-       color = "Genre") +
-  theme_minimal() +                                                # Use minimal theme for cleaner plot
-  theme(legend.position = "bottom")                                # Position the legend at the bottom
 
 
 ```
+
+
+```{r}
+library(ggplot2)
+library(dplyr)
+
+# Step 1: Use all available data (remove filter)
+data_all_decades <- most_successes_in_each_decade
+
+# Step 2: Plot 1 - Number of Movies per Genre and Decade (Line Chart)
+p1 <- ggplot(data_all_decades, aes(x = as.numeric(decade), y = movie_count, color = genres, group = genres)) +
+  geom_line(size = 1.2) +  # Line chart
+  geom_point(size = 3) +   # Add points to the line chart
+  labs(
+    title = "Number of Movies by Genre and Decade",
+    x = "Decade",
+    y = "Number of Movies"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
+  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for readability
+
+# Step 3: Plot 2 - Total Votes per Genre and Decade (Line Chart)
+p2 <- ggplot(data_all_decades, aes(x = as.numeric(decade), y = total_votes, color = genres, group = genres)) +
+  geom_line(size = 1.2) +  # Line chart
+  geom_point(size = 3) +   # Add points to the line chart
+  labs(
+    title = "Total Votes by Genre and Decade",
+    x = "Decade",
+    y = "Total Votes"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
+  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for readability
+
+# Step 4: Plot 3 - Votes per Movie by Genre and Decade (Line Chart)
+p3 <- ggplot(data_all_decades, aes(x = as.numeric(decade), y = votes_per_movie, color = genres, group = genres)) +
+  geom_line(size = 1.2) +  # Line chart
+  geom_point(size = 3) +   # Add points to the line chart
+  labs(
+    title = "Votes per Movie by Genre and Decade",
+    x = "Decade",
+    y = "Votes per Movie"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
+  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for readability
+
+# Step 5: Plot all three charts
+print(p1)
+print(p2)
+print(p3)
+
+
+```
+
+
+
+```{r}
+
+library(ggplot2)
+library(dplyr)
+
+# Step 1: Filter data from 1990 to 2020
+data_from_1990 <- most_successes_in_each_decade %>%
+  filter(as.numeric(decade) >= 1990 & as.numeric(decade) <= 2020)
+
+# Step 2: Plot 1 - Number of Movies per Genre and Decade (Line Chart)
+p1 <- ggplot(data_from_1990, aes(x = as.numeric(decade), y = movie_count, color = genres, group = genres)) +
+  geom_line(size = 1.2) +  # Line chart
+  geom_point(size = 3) +   # Add points to the line chart
+  labs(
+    title = "Number of Movies by Genre and Decade (1990 to 2020)",
+    x = "Decade",
+    y = "Number of Movies"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
+  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for readability
+
+# Step 3: Plot 2 - Total Votes per Genre and Decade (Line Chart)
+p2 <- ggplot(data_from_1990, aes(x = as.numeric(decade), y = total_votes, color = genres, group = genres)) +
+  geom_line(size = 1.2) +  # Line chart
+  geom_point(size = 3) +   # Add points to the line chart
+  labs(
+    title = "Total Votes by Genre and Decade (1990 to 2020)",
+    x = "Decade",
+    y = "Total Votes"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
+  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for readability
+
+# Step 4: Plot 3 - Votes per Movie by Genre and Decade (Line Chart)
+p3 <- ggplot(data_from_1990, aes(x = as.numeric(decade), y = votes_per_movie, color = genres, group = genres)) +
+  geom_line(size = 1.2) +  # Line chart
+  geom_point(size = 3) +   # Add points to the line chart
+  labs(
+    title = "Votes per Movie by Genre and Decade (1990 to 2020)",
+    x = "Decade",
+    y = "Votes per Movie"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  # Rotate x-axis labels for readability
+  scale_y_continuous(labels = scales::comma)  # Format y-axis with commas for readability
+
+# Step 5: Plot all three charts
+print(p1)
+print(p2)
+print(p3)
+
+
+
+```
+
 
 Based on your findings, select a genre for your next project. Note that you may
 wish to avoid an "oversatured" genre; you just need to make the argument that
